# visualdynamics

./: .dockerignore  .env.dev  .env.example  .gitignore  .release-it.json  CHANGELOG.md  Dockerfile  Dockerfile.client  LICENSE  README.md  VDFiles  babel.cfg  clear_DataBase.py  clear_database.py  cleardb.py  compile-and-install-gromacs-2018.sh  conda-environment.yml  crowdin.yml  database.sql  docker-compose.dev.yml  docker-compose.nogpu.dev.yml  docker-compose.nogpu.prod.yml  docker-compose.nogpu.yml  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.js  environment.yml  install.sh  package.json  pnpm-lock.yaml  pwsh.sh  release.config.js  requirements.txt  run  run-dev.sh  run-prod.sh  run-server.sh  run.sh  start.sh  visualdynamics.nginx.conf  (+1 more)
apps/server/: .dockerignore  Dockerfile  app.py  celery-flower.service  celery.service  package.json  pyproject.toml
apps/server/server/: celery.py  celery_tasks.py  config.py
apps/server/server/resources/celery/: active_tasks.py  reserved_tasks.py
apps/server/server/resources/downloads/: __init__.py  archive.py  commands.py  figures.py  log.py  results.py
apps/server/server/resources/generate/: acpype.py  apo.py  prodrg.py
apps/server/server/resources/generate_acpype/: __init__.py
apps/server/server/resources/generate_apo/: __init__.py
apps/server/server/resources/generate_prodrg/: __init__.py
apps/server/server/resources/mdfiles/: update.py
apps/server/server/resources/run/: __init__.py  abort.py
apps/server/server/utils/: create_folders.py  find_binaries.py  prisma.py  run_command.py
(+1380 files in other folders)
