[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Ivo <ivo@vist.gg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
flask-restful = "^0.3.9"
prisma = "^0.8.2"
asyncio = "^3.4.3"
flask-cors = "^3.0.10"
celery = {extras = ["redis"], version = "^5.2.7"}
flower = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
